--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,7 +7,7 @@
     z-index: 100;
     left:0;
     top: 0px;
-    height: 60px;
+    height: 85px;
     width: 100%;
     position: fixed;
     background: url(../images/nav-bg.gif) #353535;
@@ -18,7 +18,7 @@
         border: 0;
         outline: none;
         margin: 0 0 50px 0;
-        padding: 0 0 5px 0;
+        padding: 5px 0 5px 0;
     
         h1 {
           font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -128,5 +128,17 @@
             }
           }
         }
+    }
+}
+
+section{
+    h2{
+        code {
+            font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
+            color:#efefef;
+            margin: 0 4px;
+            padding: 4px 6px;
+            border-radius: 2px;
+          }
     }
 }
