--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -139,6 +139,7 @@ section{
             margin: 0 4px;
             padding: 4px 6px;
             border-radius: 2px;
+            font-size: 24px;
           }
     }
 }
