--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -137,7 +137,7 @@ section{
             font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
             color:#efefef;
             margin: 0 4px;
-            padding: 4px 6px;
+            padding: 0;
             border-radius: 2px;
             font-size: 24px;
           }
