--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,9 +13,9 @@
   <body>
 
     <header>
-      <div class="container">
+      <div class="container stravaig-header">
         <a id="a-title" href="{{ '/' | relative_url }}">
-          <h1 class="stravaig-header">{{ site.title | default: site.github.repository_name }}</h1>
+          <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
